samples/_failures_safe/1761166871_3f4e66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffbf4aa5.c: In function ‘main’:
./samples/SAFE/__tmp_ffbf4aa5.c:162:25: error: missing terminating " character
  162 |         fprintf(stderr, "Failed to
      |                         ^~~~~~~~~~
./samples/SAFE/__tmp_ffbf4aa5.c:162:9: error: expected expression at end of input
  162 |         fprintf(stderr, "Failed to
      |         ^~~~~~~
./samples/SAFE/__tmp_ffbf4aa5.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffbf4aa5.c:162:9: error: expected declaration or statement at end of input
